--- a/HotelSystem/HotelSystem/HotelSystem.csproj
+++ b/HotelSystem/HotelSystem/HotelSystem.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\sitko\OneDrive\Pulpit\Programowanie\HotelSystem\HotelSystem\HotelSystem\HotelSystem.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\sitko\OneDrive\Pulpit\Programowanie\HotelSystem\HotelSystem\HotelSystem\bin\Debug\net5.0\HotelSystem.mxl</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
