--- a/HotelSystem/HotelSystem.Infrastructure/HotelSystem.Infrastructure.csproj
+++ b/HotelSystem/HotelSystem.Infrastructure/HotelSystem.Infrastructure.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\HotelSystem.Application\HotelSystem.Application.csproj" />
   </ItemGroup>
 
 </Project>
