--- a/HotelSystem/HotelSystem.Persistance/HotelSystem.Persistance.csproj
+++ b/HotelSystem/HotelSystem.Persistance/HotelSystem.Persistance.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HotelSystem.Application\HotelSystem.Application.csproj" />
     <ProjectReference Include="..\HotelSystem.Domain\HotelSystem.Domain.csproj" />
   </ItemGroup>
 
