--- a/HotelSystem/HotelSystem.Infrastructure/HotelSystem.Infrastructure.csproj
+++ b/HotelSystem/HotelSystem.Infrastructure/HotelSystem.Infrastructure.csproj
@@ -5,7 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HotelSystem.Application\HotelSystem.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="FileStore\" />
   </ItemGroup>
 
 </Project>
