--- a/HotelSystem/HotelSystem.Application/HotelSystem.Application.csproj
+++ b/HotelSystem/HotelSystem.Application/HotelSystem.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HotelSystem.Domain\HotelSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
