--- a/HotelSystem/HotelSystem/appsettings.json
+++ b/HotelSystem/HotelSystem/appsettings.json
@@ -2,12 +2,21 @@
   "ConnectionStrings": {
     "HotelDatabase" : "Server=localhost\\SQLExpress08;Database=HotelDatabase;Trusted_Connection=True;"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File"
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
