--- a/HotelSystem/HotelSystem/appsettings.json
+++ b/HotelSystem/HotelSystem/appsettings.json
@@ -14,7 +14,17 @@
     "WriteTo": [
       { "Name": "Console" },
       {
-        "Name": "File"
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Temp\\Logs\\log.txt",
+          "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:8081"
+        }
       }
     ]
   },
