--- a/HotelSystem/WebApi.IntegrationTests/WebApi.IntegrationTests.csproj
+++ b/HotelSystem/WebApi.IntegrationTests/WebApi.IntegrationTests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HotelSystem.Persistance\HotelSystem.Persistance.csproj" />
+    <ProjectReference Include="..\HotelSystem\HotelSystem.Api.csproj" />
   </ItemGroup>
 
 </Project>
